# quant-archive

./: Backtest_result_601788_SH.md  README.md  Stock_Quant_environment.yml  Stock_Quant_environment_for_mac.yml  csv_downloader.py  main.py  requirements.txt
CrewAI/: 使用教程.md
QuantAI/: 使用教程.md  配置教程.md
QuantIAI/: README.md  report.md  使用教程.md
Structure_RQA/: CLAUDE.md  aggressive_momentum_strategy.py  ai_tech_momentum_strategy.py  analyze_profitable_strategy.py  analyze_strategy_performance.py  enhanced_profitable_strategy.py  final_profitable_strategy.py  high_frequency_swing_strategy.py  multi_theme_rotation_strategy.py  optimized_profitable_strategy.py  profitable_breakout_strategy.py  refined_target_strategy.py  requirements.txt  result.pkl  sector_rotation_strategy.py  trend_breakout_strategy.py
Structure_selfbuilt/: Stock_Quant_environment_for_mac.yml  main.py  run_state_on_601788_csv.py  test2(hmmlearn).py  市场状态识别系统使用指南.md
Structure_selfbuilt/strategies/nlp_with_QuantAI/: pyproject.toml
backtest/: backtester.py
config/: config.py
data/: 000001_SZ.csv  001330_SH.csv  601788_SH.csv
live/: trader.py
strategies/: GM_MetaTesting.py  base_strategy.py  bollinger_strategy.py  ma_strategy.py  macd_strategy.py  meta_model_strategy.py  my_strategy.py  rsi_strategy.py
strategies/nlp with QuantAI/: nlpAI简介.md  pyproject.toml  微博评论.xlsx
strategies/nlp with QuantAI/src/: main.py
strategies/nlp with QuantAI/src/config/: agents.yaml  tasks.yaml
utils/: data_fetcher.py
work log/: MACD策略简介.md  MA简介.md  RNN&LSTM简介.docx  Transformer简介.docx  quant.小小.docx  (+7 more)
(+87 files in other folders)
