[project]
name = "justatry"
version = "0.1.0"
description = "justatry using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
justatry = "justatry.main:run"
run_crew = "justatry.main:run"
train = "justatry.main:train"
replay = "justatry.main:replay"
test = "justatry.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
