[project]
name = "nlp_with_QuantAI"
version = "0.1.0"
description = "nlp_with_QuantAI using CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
nlp_with_QuantAI = "nlp_with_QuantAI.main:run"
run_crew = "nlp_with_QuantAI.main:run"
train = "nlp_with_QuantAI.main:train"
replay = "nlp_with_QuantAI.main:replay"
test = "nlp_with_QuantAI.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
